libs/psd/psd_layer_record.cpp
@@ -311,43 +311,135 @@ bool PSDLayerRecord::readImpl(QIODevice &io)
 
         // See https://www.adobe.com/devnet-apps/photoshop/fileformatashtml/#50577409_22582
         quint32 layerMaskLength = 1; // invalid...
-        if (!psdread<byteOrder>(io, layerMaskLength) || io.bytesAvailable() < layerMaskLength
-            || !(layerMaskLength == 0 || layerMaskLength == 20 || layerMaskLength == 36)) {
+        if (!psdread<byteOrder>(io, layerMaskLength) || io.bytesAvailable() < layerMaskLength) {
             error = QString("Could not read layer mask length: %1").arg(layerMaskLength);
             return false;
         }
 
         layerMask = {};
 
-        if (layerMaskLength == 20 || layerMaskLength == 36) {
-            if (!psdread<byteOrder>(io, layerMask.top) || !psdread<byteOrder>(io, layerMask.left) || !psdread<byteOrder>(io, layerMask.bottom)
-                || !psdread<byteOrder>(io, layerMask.right) || !psdread<byteOrder>(io, layerMask.defaultColor) || !psdread<byteOrder>(io, flags)) {
-                error = "could not read mask record";
+        if (layerMaskLength == 0) {
+            dbgFile << "\tNo layer mask/adjustment layer data. pos" << io.pos();
+        } else {
+            dbgFile << "\tReading layer mask/adjustment layer data. Length of block:" << layerMaskLength << "pos"
+                    << io.pos();
+
+            if (!psdread<byteOrder>(io, layerMask.top) || !psdread<byteOrder>(io, layerMask.left)
+                || !psdread<byteOrder>(io, layerMask.bottom) || !psdread<byteOrder>(io, layerMask.right)
+                || !psdread<byteOrder>(io, layerMask.defaultColor) || !psdread<byteOrder>(io, flags)) {
+                error = "could not read common records of layer mask";
                 return false;
             }
-        }
-        if (layerMaskLength == 20) {
-            quint16 padding;
-            if (!psdread<byteOrder>(io, padding)) {
-                error = "Could not read layer mask padding";
-                return false;
+
+            layerMask.positionedRelativeToLayer = (flags & 1) != 0;
+            layerMask.disabled = (flags & 2) != 0;
+            layerMask.invertLayerMaskWhenBlending = (flags & 4) != 0;
+            const bool hasMaskParameters = (flags & 8) != 0;
+
+            dbgFile << "\tLayer mask info (original): position relative" << layerMask.positionedRelativeToLayer
+                    << ", disabled" << layerMask.disabled << ", invert" << layerMask.invertLayerMaskWhenBlending
+                    << ", needs to read mask parameters" << hasMaskParameters;
+
+            if (layerMaskLength == 20) {
+                quint16 padding = 0;
+                if (!psdread<byteOrder>(io, padding)) {
+                    error = "Could not read layer mask padding";
+                    return false;
+                }
+            } else {
+                quint32 remainingBlockLength = layerMaskLength - 18;
+
+                dbgFile << "\tReading selective records from layer mask info. Remaining block length"
+                        << remainingBlockLength;
+
+                if (hasMaskParameters) {
+                    if (!psdread<byteOrder>(io, flags)) {
+                        error = "could not read mask parameters";
+                        return false;
+                    }
+
+                    remainingBlockLength -= 1;
+
+                    dbgFile << "\t\tMask parameters" << QString::number(flags, 2) << ". Remaining block length"
+                            << remainingBlockLength;
+
+                    if (flags & 1) {
+                        quint8 dummy = 0;
+                        if (!psdread<byteOrder>(io, dummy)) {
+                            error = "could not read user mask density";
+                            return false;
+                        }
+                        remainingBlockLength -= sizeof(dummy);
+                    }
+
+                    if (flags & 2) {
+                        double dummy = 0;
+                        if (!psdread<byteOrder>(io, dummy)) {
+                            error = "could not read user mask feather";
+                            return false;
+                        }
+                        remainingBlockLength -= sizeof(dummy);
+                    }
+
+                    if (flags & 4) {
+                        quint8 dummy = 0;
+                        if (!psdread<byteOrder>(io, dummy)) {
+                            error = "could not read vector mask density";
+                            return false;
+                        }
+                        remainingBlockLength -= sizeof(dummy);
+                    }
+
+                    if (flags & 8) {
+                        double dummy = 0;
+                        if (!psdread<byteOrder>(io, dummy)) {
+                            error = "could not read vector mask feather";
+                            return false;
+                        }
+                        remainingBlockLength -= sizeof(dummy);
+                    }
+                }
+
+                if (remainingBlockLength >= 1) {
+                    if (!psdread<byteOrder>(io, flags)) {
+                        error = "could not read 'real' mask record";
+                        return false;
+                    }
+
+                    layerMask.positionedRelativeToLayer = (flags & 1) != 0;
+                    layerMask.disabled = (flags & 2) != 0;
+                    layerMask.invertLayerMaskWhenBlending = (flags & 4) != 0;
+                    const bool hasMaskParameters = (flags & 8) != 0;
+
+                    dbgFile << "\t\tLayer mask info (real): position relative" << layerMask.positionedRelativeToLayer
+                            << ", disabled" << layerMask.disabled << ", invert" << layerMask.invertLayerMaskWhenBlending
+                            << ", needs to read mask parameters" << hasMaskParameters;
+
+                    remainingBlockLength -= 1;
+
+                    dbgFile << "\t\tRemaining block length" << remainingBlockLength;
+                }
+
+                if (remainingBlockLength >= 1) {
+                    if (!psdread<byteOrder>(io, layerMask.defaultColor)) {
+                        error = "could not read 'real' default color";
+                        return false;
+                    }
+                    remainingBlockLength -= 1;
+                    dbgFile << "\t\tRead 'real' default color. Remaining block length" << remainingBlockLength;
+                }
+
+                if (remainingBlockLength >= 16) {
+                    if (!psdread<byteOrder>(io, layerMask.top) || !psdread<byteOrder>(io, layerMask.left)
+                        || !psdread<byteOrder>(io, layerMask.bottom) || !psdread<byteOrder>(io, layerMask.right)) {
+                        error = "could not read 'real' mask rectangle";
+                        return false;
+                    }
+                    remainingBlockLength -= 16;
+                    dbgFile << "\t\tRead 'real' mask rectangle. Remaining block length" << remainingBlockLength;
+                }
             }
         }
-
-        // If it's 36, that is, bit four of the flags is set, we also need to read the 'real' flags, background and rectangle
-        if (layerMaskLength == 36) {
-            if (!psdread<byteOrder>(io, flags) || !psdread<byteOrder>(io, layerMask.defaultColor) || !psdread<byteOrder>(io, layerMask.top)
-                || !psdread<byteOrder>(io, layerMask.left) || !psdread<byteOrder>(io, layerMask.bottom) || !psdread<byteOrder>(io, layerMask.right)) {
-                error = "could not read 'real' mask record";
-                return false;
-            }
-        }
-
-        layerMask.positionedRelativeToLayer = flags & 1 ? true : false;
-        layerMask.disabled = flags & 2 ? true : false;
-        layerMask.invertLayerMaskWhenBlending = flags & 4 ? true : false;
-
-        dbgFile << "\tRead layer mask/adjustment layer data. Length of block:" << layerMaskLength << "pos" << io.pos();
 
         // layer blending thingies
         quint32 blendingDataLength = 0;
